refactor(paper): remove aliases from ByteChat main command